name:                fnapp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/emhoracek/fnapp#readme
license:             BSD3
license-file:        LICENSE
author:              Libby Horacek
maintainer:          libby@daydrea.me
copyright:           GPL3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable fnapp
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , fn
                     , wai
                     , warp
                     , text
                     , logging
                     , postgresql-simple
                     , resource-pool
                     , containers
                     , data-default
                     , lens
                     , vault
                     , hedis
                     , lucid
                     , wai-session
                     , wai-session-clientsession
                     , clientsession
                     , cookie
                     , cereal-text
  default-language:    Haskell2010

test-suite fnapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fnapp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emhoracek/fnapp
